samples/_failures_safe/1761480977_d56693_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c6132ec4.c: In function ‘main’:
./samples/SAFE/__tmp_c6132ec4.c:143:13: error: expected ‘;’ at end of input
  143 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_c6132ec4.c:143:5: error: expected declaration or statement at end of input
  143 |     return 0
      |     ^~~~~~
